added onClickListener to recycler view and add vaccine activity

--- a/Capstone2/app/src/main/AndroidManifest.xml
+++ b/Capstone2/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
         <activity android:name=".AddMemberForm" />
         <activity android:name=".AddPatientForm" />
         <activity android:name=".AddStudentForm" />
-        <activity android:name=".ViewRecordActivity" />
+        <activity android:name=".AddVaccineActivity" />
+        <activity android:name=".ViewMembersActivity" />
+        <activity android:name=".VaccineRecordActivity" />
     </application>
 
 </manifest>
