--- a/Capstone2/app/src/main/AndroidManifest.xml
+++ b/Capstone2/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DoctorUpdateActivity" />
         <activity android:name=".VaccineInfoActivity" />
         <activity android:name=".CalendarActivity" />
         <activity android:name=".DoctorProfileActivity" />
@@ -38,6 +37,8 @@
         <activity android:name=".AddStudentForm" />
         <activity android:name=".AddVaccineActivity" />
         <activity android:name=".ViewMembersActivity" />
+        <activity android:name=".ViewPatientsActivity" />
+        <activity android:name=".ViewStudentsActivity" />
         <activity android:name=".VaccineRecordActivity" />
     </application>
 
