--- a/Capstone2/app/build.gradle
+++ b/Capstone2/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
 
     // Testing
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+
+    // Calendar component
+    compile 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
