--- a/Capstone2/app/build.gradle
+++ b/Capstone2/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 
     // Calendar component
-    compile 'com.github.sundeepk:compact-calendar-view:3.0.0'
+    implementation "com.github.sundeepk:compact-calendar-view:3.0.0"
 }
